Edited Contact details

--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,4 +1,4 @@
-<h4 style="font-family: 'Economica'; "> Leave Your Message </h4><br>
+<!-- h4 style="font-family: 'Economica'; "> Leave Your Message </h4><br -->
 <form accept-charset="UTF-8" action="https://getform.io/f/f86d0d24-5ad8-41ec-aa8b-69b22fdbcb45" method="POST" enctype="multipart/form-data" target="_blank">
   <div class="form-row">
     <div class="form-group col-md-6">
@@ -17,7 +17,7 @@
   </div-->
   <div class="form-group">
     <label for="exampleInputmessage">Feedback/Message/Suggestion </label>
-    <textarea class="form-control" name="message" id="exampleInputName" rows="3"></textarea>
+    <textarea class="form-control" name="message" id="exampleInputName" rows="2"></textarea>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
